--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- Brand/logo -->
   <a class="navbar-brand" href="index.html">
-    <img src="C:\Users\asus\Desktop\Cat Pic\LOGO.png"  style="width:25px;">
+    <img src="Cat Pic/LOGO.png"  style="width:25px;">
   </a>
   
   <!-- Links -->
